--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+    <script src="https://kit.fontawesome.com/72483ce1b4.js" crossorigin="anonymous"></script>
     <title>Sutairu</title>
     <meta
       name="description"
