contact us with email functionality

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/72483ce1b4.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <title>Sutairu</title>
   </head>
   <body>
